# agent-harbor

./: .cspell.json  .editorconfig  .envrc  .eslintrc.json  .gitignore  .gitmodules  .lychee.toml  .markdownlint-cli2.yaml  .prettierignore  .rubocop.yml  .vale.ini  .yarnrc.yml  AGENTS.md  COPYRIGHT  Cargo.toml  Justfile  LICENSING.md  README.md  YARN-PNP-ELECTRON.md  _demo_scenario.json  clippy.toml  cursor-cli-agent-plan.md  cursor-cli-integration-plan.md  eslint.config.mjs  extract_cursor_token.py  failing-tests.txt  flake.nix  integration-test.sh  lychee.toml  package.json  process-compose.yaml  repomix.config.json  rust-toolchain.toml  rustfmt.toml  session_summary.txt  split_mode_test.rs  split_mode_test_simple.rs  test.ahr  test_multiplexer.rs  test_scenario_integration.js  (+3 more)
PoC/tui-exploration/: Cargo.toml  README.md  key_log.txt  run.sh  test_enhanced_settings.rs  test_event_stream.rs  test_new_task_manager.rs
PoC/tui-exploration/src/: autocomplete.rs  lib.rs  main.rs  main_mvvm.rs  model.rs  settings.rs  settings_test.rs  shortcuts.rs  task_manager.rs  view.rs  view_model.rs  workspace_files.rs  workspace_workflows.rs
PoC/tui-exploration/tests/: autocomplete_tests.rs  event_processing_tests.rs  model_viewmodel_tests.rs  mouse_tests.rs  navigation_tests.rs  overlay_tests.rs  prd_input_tests.rs  task_manager_tests.rs  test_task_manager.rs
crates/: x.json
crates/agentfs-backstore-macos/: Cargo.toml
crates/agentfs-backstore-macos/src/: lib.rs
crates/agentfs-client/: Cargo.toml
crates/agentfs-client/src/: lib.rs
crates/agentfs-control-cli/: Cargo.toml
crates/agentfs-control-cli/src/: main.rs
crates/agentfs-core/: Cargo.toml
crates/agentfs-core/src/: config.rs  error.rs  fault.rs  lib.rs  overlay.rs  storage.rs  test_export.rs  test_materialization.rs  testing.rs  types.rs  vfs.rs
crates/agentfs-daemon/: Cargo.toml  README.md  build.rs
crates/agentfs-daemon/src/: daemon.rs  handshake.rs  lib.rs  macos.rs  main.rs  watch_service.rs
crates/agentfs-daemon/tests/: handshake_smoke.rs  integration_test.rs
crates/agentfs-ffi/: Cargo.toml
crates/agentfs-ffi/src/: c_api.rs  lib.rs
crates/agentfs-fuse-host/: Cargo.toml
crates/agentfs-fuse-host/src/: adapter.rs  main.rs
crates/agentfs-fuse-host/tests/: linux_fuse_help.rs
crates/agentfs-fuse-stress/: Cargo.toml
crates/agentfs-fuse-stress/src/: main.rs
crates/agentfs-interpose-e2e-tests/: Cargo.toml  README.md  build.rs
crates/agentfs-interpose-e2e-tests/src/: handshake.rs  lib.rs  macos.rs
crates/agentfs-interpose-shim/: Cargo.toml  README.md  build.rs
crates/agentfs-interpose-shim/src/: lib.rs  macos.rs  non_macos.rs
crates/agentfs-winfsp-host/: Cargo.toml
crates/agentfs-winfsp-host/src/: main.rs
crates/ah-acp-bridge/: Cargo.toml
crates/ah-acp-bridge/src/: lib.rs
crates/ah-acp-mock-client/: Cargo.toml
crates/ah-acp-mock-client/src/: client.rs  executor.rs  handlers.rs  lib.rs
crates/ah-agent-claude/: Cargo.toml
crates/ah-agent-claude/src/: lib.rs
crates/ah-agent-codex/: Cargo.toml
crates/ah-agent-codex/src/: lib.rs
crates/ah-agent-cursor/: Cargo.toml
crates/ah-agent-cursor/src/: lib.rs
crates/ah-agents/: Cargo.toml  README.md
crates/ah-agents/src/: acp.rs  claude.rs  codex.rs  common.rs  copilot.rs  credential_acquisition.rs  credentials.rs  cursor.rs  gemini.rs  lib.rs  oauth_key_exchange.rs  session.rs  snapshot.rs  test_support.rs  test_utils.rs  traits.rs
crates/ah-agents/tests/: credential_acquisition_tests.rs  integration_test.rs  mock_server_integration.rs
crates/ah-cli/: Cargo.toml
crates/ah-cli/src/: acp.rs  config.rs  config_commands.rs  health.rs  lib.rs  main.rs  sandbox.rs  task.rs  test_config.rs  transport.rs  tui.rs
crates/ah-cli/tests/: acp_record_smoke.rs  acp_round_trip_e2e.rs  agentfs_status_command.rs  cli_help_snapshots.rs  cli_request_builders_test.rs  cli_tests.rs  create-test-files.sh  credentials_acquisition.rs  credentials_commands.rs  sandbox_workspace_agentfs.rs  task_scenario_tests.rs  verify-test-files.sh
crates/ah-client-api/: Cargo.toml
crates/ah-client-api/src/: lib.rs
crates/ah-command-trace-client/: Cargo.toml
crates/ah-command-trace-client/src/: io_trait.rs  lib.rs
crates/ah-command-trace-e2e-tests/: Cargo.toml  build.rs
crates/ah-command-trace-e2e-tests/src/: lib.rs  platform.rs
crates/ah-command-trace-e2e-tests/tests/: agent_capture.rs  passthrough_recorder.rs  shim_auto_propagation.rs  shim_injection_smoke.rs  shim_output_capture.rs
crates/ah-command-trace-server/: Cargo.toml
crates/ah-command-trace-server/src/: lib.rs
crates/ah-command-trace-shim/: Cargo.toml  README.md
crates/ah-command-trace-shim/src/: hook_safe_io.rs  lib.rs  passthrough.rs  platform.rs  posix.rs  unsupported.rs
crates/ah-config-types/: Cargo.toml
crates/ah-config-types/src/: lib.rs  repo.rs  sandbox.rs  server.rs  ui.rs
crates/ah-core/: Cargo.toml
crates/ah-core/src/: agent_binary.rs  agent_catalog.rs  agent_executor.rs  agent_tasks.rs  agent_types.rs  branches_enumerator.rs  db.rs  devshell.rs  editor.rs  error.rs  lib.rs  local_branches_enumerator.rs  local_repositories_enumerator.rs  local_task_manager.rs  push.rs  remote_branches_enumerator.rs  remote_repositories_enumerator.rs  remote_workspace_files_enumerator.rs  repositories_enumerator.rs  rest_task_manager.rs  session.rs  task.rs  task_config.rs  task_manager.rs  task_manager_daemon.rs  task_manager_dto.rs  task_manager_init.rs  task_manager_wire.rs  workspace_files_enumerator.rs  workspace_terms_enumerator.rs
crates/ah-core/tests/: agent_catalog_tests.rs  agent_tasks_tests.rs  workspace_terms_bench.rs
crates/ah-credentials/: Cargo.toml
crates/ah-credentials-tests/: Cargo.toml
crates/ah-credentials-tests/src/: fixtures.rs  lib.rs  mock_agent.rs
crates/ah-credentials/src/: config.rs  crypto.rs  error.rs  lib.rs  registry.rs  storage.rs  types.rs  validation.rs
crates/ah-credentials/tests/: config_precedence_integration.rs  crypto_integration.rs  registry_fuzzing.rs  registry_integration.rs  storage_integration.rs
crates/ah-domain-types/: Cargo.toml
(+1222 files in other folders)
