# Copyright 2025 Schelling Point Labs Inc
# SPDX-License-Identifier: AGPL-3.0-only

[workspace]
members = [
  "crates/ah-cli",
  # Agent abstraction layer (monolith + facades)
  "crates/ah-agents",
  # "crates/ah-agent-claude", # Temporarily disabled
  # "crates/ah-agent-codex", # Temporarily disabled
  "crates/ah-config-types",
  "crates/ah-core",
  "crates/ah-gui-core",
  "crates/ah-local-db",
  "crates/ah-logging",
  "crates/ah-repo",
  "crates/ah-workflows",
  "crates/ah-fs-snapshots",
  "crates/ah-fs-snapshots-traits",
  "crates/ah-fs-snapshots-zfs",
  "crates/ah-fs-snapshots-btrfs",
  "crates/ah-fs-snapshots-git",
  "crates/agentfs-fskit-sys",
  "crates/agentfs-fskit-bridge",
  "crates/ah-sandbox",
  "crates/ah-sandbox-linux",
  "crates/ah-sandbox-macos",
  "crates/ah-fs-snapshots-daemon",
  "crates/config-core",
  # Sandbox crates
  "crates/sandbox-core",
  "crates/sandbox-fs",
  "crates/sandbox-seccomp",
  "crates/sandbox-cgroups",
  "crates/sandbox-net",
  "crates/sandbox-devices",
  "crates/sandbox-proto",
  "crates/sbx-helper",
  # AgentFS crates
  "crates/agentfs-core",
  "crates/agentfs-proto",
  "crates/agentfs-control-cli",
  "crates/agentfs-client",
  "crates/agentfs-fuse-host",
  "crates/agentfs-winfsp-host",
  "crates/agentfs-fskit-host",
  "crates/agentfs-backstore-macos",
  "crates/agentfs-ffi",
  # REST API and TUI
  "crates/ah-rest-api-contract",
  "crates/ah-rest-client",
  "crates/ah-client-api",
  "crates/ah-rest-server",
  "crates/ah-scenario-format",
  "crates/ah-test-scenarios",
  "crates/ah-rest-client-mock",
  "crates/ah-rest-mock-client",
  "crates/ah-mux-core",
  "crates/ah-mux",
  "crates/ah-tui-multiplexer",
  # "crates/ah-tui-test", # Temporarily disabled - needs updates for new TUI architecture
  "crates/ah-tui",
  "crates/tui-testing",
  "crates/ah-macos-launcher",
  # Recording and replay
  "crates/ah-recorder",
  # LLM API proxy
  "crates/llm-api-proxy",
  # Integration tests
  "tests/sandbox-integration",
  "tests/cgroup-enforcement",
  "tests/overlay-enforcement",
  "tests/network-enforcement",
  "tests/debugging-enforcement",
  "tests/container-enforcement",
  "tests/vm-enforcement",
  "tests/agentfs-daemon-backstore-integration",
  "tests/tools/mock-tui-dashboard",
  "tests/fs-snapshots-test-harness",
  "tests/e2e-stackable-hooks",
  "tests/e2e-stackable-hooks-b",
  "tests/e2e-shim-a",
  "tests/e2e-shim-b",
  "tests/e2e-call-real-shim",
  "crates/agentfs-interpose-shim",
  "crates/agentfs-interpose-e2e-tests",
  "crates/agentfs-daemon",
  # Command trace shim
  "crates/ah-command-trace-proto",
  "crates/ah-command-trace-server",
  "crates/ah-command-trace-shim",
  "crates/ah-command-trace-client",
  "crates/ah-command-trace-e2e-tests",
  "crates/stackable-hooks",
]
exclude = ["vendor", "PoC", "tests/agentfs-daemon-backstore-integration"]
resolver = "2"

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.47", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Command trace shim dependencies
stackable-hooks = { path = "crates/stackable-hooks" }
ctor = "0.2"
scopeguard = "1.2"

# CLI parsing
clap = { version = "4.5", features = ["derive"] }

# Database
rusqlite = { version = "0.37", features = ["bundled"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"
ah-logging = { path = "crates/ah-logging" }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# System interfaces
nix = "0.30"
libc = "0.2"

# Async traits
async-trait = "0.1"

# Testing
tempfile = "3.0"
mockall = "0.13"

# HTTP client for connectivity checks
ureq = { version = "2.0", features = ["json"] }

# VCS repository abstraction
chrono = { version = "0.4", features = ["serde"] }

# SSZ serialization for daemon
ethereum_ssz = "0.8"
ethereum_ssz_derive = "0.8"

# HTTP client for REST API
reqwest = { version = "0.12", features = ["json", "stream"] }

# URL parsing
url = "2.5"

# Base64 encoding
base64 = "0.22"

# Hex encoding
hex = "0.4"

# Directory utilities
dirs = "5.0"

# SSE client
eventsource-client = "0.13"

# Terminal UI
ratatui = "0.29"
crossterm = "0.28"
tui-textarea = { path = "vendor/tui-textarea", features = ["search"] }
vt100 = { path = "vendor/vt100" }

# Validation
validator = { version = "0.20", features = ["derive"] }

# UUID generation
uuid = { version = "1.18", features = ["v4", "serde"] }

# Futures utilities
futures = "0.3"

# Unicode width calculation
unicode-width = "0.2"

# Use vendored copies of dependencies
[patch.crates-io]
tui-textarea = { path = "vendor/tui-textarea" }
vt100 = { path = "vendor/vt100" }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
