# Copyright 2025 Schelling Point Labs Inc
# SPDX-License-Identifier: AGPL-3.0-only

[package]
name = "agentfs-backstore-macos"
version = "0.1.0"
edition = "2024"

[dependencies]
agentfs-core = { path = "../agentfs-core" }
tempfile = "3.0"
proptest = { version = "1.0", optional = true }
libc = "0.2"

[dev-dependencies]
proptest = "1.0"
criterion = "0.5"
