# Copyright 2025 Schelling Point Labs Inc
# SPDX-License-Identifier: AGPL-3.0-only

[package]
name = "agentfs-client"
version = "0.1.0"
edition = "2021"

[dependencies]
ah-logging.workspace = true
anyhow.workspace = true
libc.workspace = true
agentfs-daemon = { workspace = true }
agentfs-proto = { workspace = true }
tracing.workspace = true
