[package]
name = "agentfs-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
libc = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
mockall = { workspace = true }
