# Copyright 2025 Schelling Point Labs Inc
# SPDX-License-Identifier: AGPL-3.0-only

[package]
name = "agentfs-daemon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "agentfs-daemon"
path = "src/bin/agentfs-daemon.rs"

[dependencies]
agentfs-core = { path = "../agentfs-core" }
agentfs-proto = { path = "../agentfs-proto" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
tokio = { version = "1.0", features = [
  "net",
  "io-util",
  "sync",
  "macros",
  "rt-multi-thread",
] }
ssz = { package = "ethereum_ssz", version = "0.8" }
ssz_derive = { package = "ethereum_ssz_derive", version = "0.8" }
core-foundation = "0.10"
core-foundation-sys = "0.8"
scopeguard = "1.2"
