# Copyright 2025 Schelling Point Labs Inc
# SPDX-License-Identifier: AGPL-3.0-only

[package]
name = "agentfs-daemon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "agentfs-daemon"
path = "src/bin/agentfs-daemon.rs"

[lib]
doctest = false

[dependencies]
agentfs-core = { workspace = true }
agentfs-proto = { workspace = true }
ah-logging = { workspace = true }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
tokio = { version = "1.0", features = [
  "net",
  "io-util",
  "sync",
  "macros",
  "rt-multi-thread",
] }
ssz = { package = "ethereum_ssz", version = "0.8" }
ssz_derive = { package = "ethereum_ssz_derive", version = "0.8" }
tempfile = "3.0"

# macOS-specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
agentfs-backstore-macos = { workspace = true }
core-foundation = "0.10"
core-foundation-sys = "0.8"
scopeguard = "1.2"

[dev-dependencies]
agentfs-client = { workspace = true }
agentfs-interpose-e2e-tests = { workspace = true }

[build-dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "fmt",
] }
