# Copyright 2025 Schelling Point Labs Inc
# SPDX-License-Identifier: AGPL-3.0-only

[package]
name = "agentfs-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
agentfs-core = { path = "../agentfs-core" }
agentfs-proto = { path = "../agentfs-proto" }
anyhow = { workspace = true }
ethereum_ssz = { workspace = true }
ethereum_ssz_derive = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
lazy_static = "1.4"
serde_json = { workspace = true }

[dev-dependencies]
ah-test-utils = { workspace = true }
tempfile = { workspace = true }
