# Copyright 2025 Schelling Point Labs Inc
# SPDX-License-Identifier: AGPL-3.0-only

[package]
name = "agentfs-fuse-host"
version = "0.1.0"
edition = "2021"

[dependencies]
agentfs-core = { workspace = true }
agentfs-proto = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
clap = { workspace = true }
tracing-subscriber = { workspace = true }
crossbeam-queue = "0.3"

serde_json = { workspace = true }
libc = "0.2"
# SSZ serialization (matching agentfs-proto)
ethereum_ssz = "0.8"
ethereum_ssz_derive = "0.8"

[features]
default = []
# Enable Linux FUSE support by turning on the optional, Linux-only `fuser` dep
fuse = ["dep:fuser"]

[dev-dependencies]
tempfile = { workspace = true }
tokio = { version = "1.0", features = ["rt", "macros"] }

[target.'cfg(target_os = "linux")'.dependencies]
# FUSE dependency is Linux-only and optional; enabled via the `fuse` feature
fuser = { version = "0.16", optional = true, features = ["abi-7-40"] }
