[package]
name = "agentfs-interpose-e2e-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = "1.19"
tempfile = "3.8"
libc = "0.2"
ssz = { package = "ethereum_ssz", version = "0.8" }
ssz_derive = { package = "ethereum_ssz_derive", version = "0.8" }
serde = { version = "1.0", features = ["derive"] }

[dependencies.agentfs-proto]
path = "../agentfs-proto"

[dependencies.agentfs-core]
path = "../agentfs-core"

[[bin]]
name = "agentfs-interpose-test-helper"
path = "src/bin/test_helper.rs"

[[bin]]
name = "agentfs-interpose-mock-daemon"
path = "src/bin/mock_daemon.rs"
