# Copyright 2025 Schelling Point Labs Inc
# SPDX-License-Identifier: AGPL-3.0-only

[package]
name = "agentfs-interpose-e2e-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = "1.19"
tempfile = "3.8"
libc = "0.2"
ssz = { package = "ethereum_ssz", version = "0.8" }
ssz_derive = { package = "ethereum_ssz_derive", version = "0.8" }
unicode-normalization = "0.1"

# macOS-specific dependencies (conditional compilation)
[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-foundation-sys = "0.8"
fsevent-sys = "5.1"

[dependencies.agentfs-proto]
path = "../agentfs-proto"

[dependencies.agentfs-core]
path = "../agentfs-core"

[dependencies.agentfs-daemon]
path = "../agentfs-daemon"

# macOS-only binary (conditional compilation)
[target.'cfg(target_os = "macos")'.bin]
name = "test_helper"
path = "src/bin/test_helper.rs"
