[package]
name = "agentfs-interpose-shim"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ctor = "0.2"
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
libc = "0.2"
ethereum_ssz = "0.8"
ethereum_ssz_derive = "0.8"
hex = "0.4"

[dev-dependencies]
tempfile = "3"
serde_json = "1.0"
ethereum_ssz = "0.8"
ethereum_ssz_derive = "0.8"
hex = "0.4"

[[bin]]
name = "agentfs-interpose-test-helper"
path = "tests/fixtures/test_helper.rs"
