# Copyright 2025 Schelling Point Labs Inc
# SPDX-License-Identifier: AGPL-3.0-only

[package]
name = "agentfs-interpose-shim"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ctor = "0.2"
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
libc = "0.2"
ethereum_ssz = "0.8"
ethereum_ssz_derive = "0.8"
hex = "0.4"
agentfs-proto = { path = "../agentfs-proto" }
tempfile = "3"
agentfs-core = { path = "../agentfs-core", optional = true }

[features]
mock-daemon = ["agentfs-core"]

[dev-dependencies]
