# Copyright 2025 Schelling Point Labs Inc
# SPDX-License-Identifier: AGPL-3.0-only

[package]
name = "agentfs-winfsp-host"
version = "0.1.0"
edition = "2021"

[dependencies]
agentfs-core = { workspace = true }
agentfs-proto = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
clap = { workspace = true }
serde_json.workspace = true
tracing-subscriber.workspace = true

# WinFsp dependencies (Windows only)
[target.'cfg(target_os = "windows")'.dependencies]
winfsp = "0.11"

[dev-dependencies]
tempfile = { workspace = true }
