# Copyright 2025 Schelling Point Labs Inc
# SPDX-License-Identifier: AGPL-3.0-only

[package]
name = "ah-acp-bridge"
version = "0.1.0"
edition = "2021"
description = "Shared translation helpers between ACP and Agent Harbor events"

[dependencies]
agent-client-protocol = { workspace = true }
ah-rest-api-contract = { workspace = true }
ah-core = { workspace = true }
ah-domain-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dirs = { workspace = true }
chrono = { workspace = true }
