# Copyright 2025 Schelling Point Labs Inc
# SPDX-License-Identifier: AGPL-3.0-only

[package]
name = "ah-agent-codex"
version = "0.1.0"
edition = "2021"
description = "Codex CLI agent facade for Agent Harbor"
license = "MIT OR Apache-2.0"

[dependencies]
# Re-export the monolith with codex feature enabled
ah-agents = { workspace = true, features = ["codex"] }

# Re-export common dependencies
async-trait = "0.1"

[dependencies.tokio]
workspace = true
features = ["process", "io-util"]
