# Copyright 2025 Schelling Point Labs Inc
# SPDX-License-Identifier: AGPL-3.0-only

[package]
name = "ah-agents"
version = "0.1.0"
edition = "2021"
description = "AI coding agent abstraction layer for Agent Harbor"
license = "MIT OR Apache-2.0"

[dependencies]
# Workspace dependencies
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["process", "io-util", "fs", "sync"] }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = "0.1"
ah-domain-types = { workspace = true }

# Additional dependencies for agent management
tar = "0.4"
flate2 = "1.0"
dirs = "5.0"
regex = "1.10"
chrono = "0.4"
rusqlite = { version = "0.37", features = ["bundled"] }
ureq = "2.9"
which = "6.0"
reqwest = { workspace = true, features = ["json"] }
tempfile = "3.8"

# Platform-specific credential management
[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2.9"

[target.'cfg(target_os = "linux")'.dependencies]
secret-service = { version = "3.0", features = ["rt-tokio-crypto-rust"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = ["Win32_Security_Credentials"] }

[dev-dependencies]
tempfile = "3.8"
ah-repo = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
llm-api-proxy = { workspace = true }
serial_test = "3"

[features]
default = ["claude", "codex", "cursor-cli", "copilot-cli", "gemini"]
# Feature gates for each agent backend
claude = []
codex = []
gemini = []
opencode = []
qwen = []
cursor-cli = []
goose = []
copilot-cli = []
crush = []
groq = []
amp = []
windsurf = []
# Feature for Rust proxy tests
rust-proxy-tests = []

[dependencies.ah-core]
path = "../ah-core"
