# Copyright 2025 Schelling Point Labs Inc
# SPDX-License-Identifier: AGPL-3.0-only

[package]
name = "ah-cli"
version = "0.1.0"
edition = "2021"
description = "Agent Harbor CLI - Main command-line interface"
license = "MIT OR Apache-2.0"

[[bin]]
name = "ah"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ratatui = "0.29"

# AH core dependencies
ah-core = { path = "../ah-core" }
ah-repo = { path = "../ah-repo" }
ah-local-db = { path = "../ah-local-db" }
config-core = { path = "../config-core" }
ah-config-types = { path = "../ah-config-types" }
ah-agents = { path = "../ah-agents" }
ah-fs-snapshots = { path = "../ah-fs-snapshots", features = [
  "zfs",
  "btrfs",
  "git",
] }
ah-fs-snapshots-zfs = { path = "../ah-fs-snapshots-zfs", optional = true }
ah-fs-snapshots-btrfs = { path = "../ah-fs-snapshots-btrfs", optional = true }
ah-fs-snapshots-git = { path = "../ah-fs-snapshots-git", optional = true }
chrono = { workspace = true, features = ["serde"] }
reqwest = { workspace = true, features = ["json"] }
uuid = { workspace = true, features = ["v4"] }
rusqlite = { version = "0.37", features = ["bundled"] }
sandbox-core = { path = "../sandbox-core", features = [
  "cgroups",
  "seccomp",
  "net",
  "devices",
] }
sandbox-seccomp = { path = "../sandbox-seccomp" }

# REST API client for TUI
ah-rest-client = { path = "../ah-rest-client" }

# TUI implementation
ah-tui = { path = "../ah-tui" }

# Workflows
ah-workflows = { path = "../ah-workflows" }

# Mock REST client for testing
ah-rest-mock-client = { path = "../ah-rest-mock-client" }

# Multiplexer support
ah-mux = { path = "../ah-mux" }
ah-mux-core = { path = "../ah-mux-core" }

# AgentFS dependencies
agentfs-proto = { path = "../agentfs-proto" }
# SSZ serialization (matching agentfs-proto)
ethereum_ssz = "0.8"
ethereum_ssz_derive = "0.8"

# Agent recording dependencies
ah-recorder = { path = "../ah-recorder" }
vt100 = { path = "../../vendor/vt100" }
crossterm = { workspace = true }
tempfile = { workspace = true }
dirs = "5.0"
ureq = "2.9"

# Platform-specific dependencies
[target.'cfg(unix)'.dependencies]
nix = { workspace = true, features = ["fs", "ioctl"] }
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
  "handleapi",
  "fileapi",
  "winioctl",
  "errhandlingapi",
] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tempfile = { workspace = true }
tui-testing = { path = "../tui-testing" }

[features]
default = ["zfs", "btrfs", "git"]
zfs = ["ah-fs-snapshots/zfs", "ah-fs-snapshots-zfs"]
btrfs = ["ah-fs-snapshots/btrfs", "ah-fs-snapshots-btrfs"]
git = ["ah-fs-snapshots/git", "ah-fs-snapshots-git"]
